2004-10-29  Marcus Brinkmann  <marcus@gnu.org>

	* ia32-cmain.c (switch_thread): Correct start of small sub stack
	address.  Reported by Rian Hunter <hurd@thelaststop.net>.

2004-10-28  Marcus Brinkmann  <marcus@gnu.org>

	* task.c (bootstrap_final): New function.
	(main): Call bootstrap_final.

2004-10-27  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile.am (task_SOURCES): Add physmem-user.h, physmem-user.c,
	malloc-wrap.c, mmap.c and task-class.c.
	(EXTRA_task_SOURCES): New target.
	* physmem-user.h, physmem-user.h, malloc.c, malloc-wrap.c, mmap.c,
	task-class.c: New files.
	* task.h (task_class_init, task_alloc): Add prototypes.
	* task.c: Include <hurd/startup.h> and <hurd/wortel.h>
	(__hurd_startup_data): New declaration.
	(create_bootstrap_caps, get_task_id, setup_threads, task_server):
	New functions.
	(first_free_thread_no): New global variable.
	(main): Call setup_threads and initialize server_thread.  Call
	task_class_init. Create task bucket.  Create manager thread and
	start it.
	
	* ia32-cmain.c (cmain): Access cap_handle member in startup_data,
	not cap_id.

2004-10-26  Marcus Brinkmann  <marcus@gnu.org>

	* ia32-crt0.S (__hurd_startup_data): New symbol.
	(_start): Save the first argument on the stack in
	__hurd_startup_data.
	* ia32-cmain.c: Include <hurd/startup.h>.
	(__hurd_startup_data): New prototype.
	(wortel_thread_id, wortel_cap_id): Do not initialize statically.
	(cmain): Initialize wortel_thread_id and wortel_cap_id.

2004-04-26  Marcus Brinkmann  <marcus@gnu.org>

	* ia32-cmain.c: Include <hurd/wortel.h>.
	(wortel_thread_id, wortel_cap_id): New variables.
	* output.c (shutdown): Include <hurd/wortel.h>.
	(shutdown): Rewritten using wortel interface.
	(putchar): Rewritten using wortel interface.
	* task.c: Remove WORTEL_* macros.

2004-04-15  Marcus Brinkmann  <marcus@gnu.org>

	* Initial check-in.
